Prevent table from overflowing and expanding page downward

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -38,6 +38,8 @@ body {
 
 .table {
   grid-area: table;
+  height: 100%;
+  overflow: hidden;
 }
 
 #table-container {
